# Snake

./: CMakeLists.txt  clean.sh  run.sh
include/: commands.hpp  config.hpp  font.hpp  food.hpp  fps_counter.hpp  game.hpp  input_handler.hpp  renderer.hpp  snake.hpp  ui.hpp  window.hpp
src/: commands.cpp  font.cpp  food.cpp  fps_counter.cpp  game.cpp  input_handler.cpp  main.cpp  renderer.cpp  snake.cpp  ui.cpp  window.cpp
